--- a/src/pages/EventList.css
+++ b/src/pages/EventList.css
@@ -67,6 +67,7 @@
   .event-list-view-switcher {
     margin: -2rem -1rem 1rem;
     width: calc(100% + 2rem);
+    box-sizing: border-box;
     position: sticky;
     top: var(--navbar-h);
     z-index: calc(var(--z-navbar) - 1);
